--- a/ProgressiveWebAppTests/Views/Shared/_Layout.cshtml
+++ b/ProgressiveWebAppTests/Views/Shared/_Layout.cshtml
@@ -6,7 +6,12 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta name="description" content="">
 	    <meta name="author" content="">
-
+	    <link rel="manifest" href="/manifest.json">
+		<!-- Add to home screen for Safari on iOS -->
+  		<meta name="apple-mobile-web-app-capable" content="yes">
+  		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+  		<meta name="apple-mobile-web-app-title" content="PWA Test">
+  		<link rel="apple-touch-icon" href="images/icons/152x152.png">
 	    <title>@ViewBag.Title</title>
 
 	    <!-- Bootstrap Core CSS -->
@@ -14,6 +19,10 @@
 
 	    <!-- Theme CSS -->
 	    <link href="/Content/css/freelancer.min.css" rel="stylesheet">
+		
+		<!-- For MS browsers -->
+		<meta name="msapplication-TileImage" content="images/icons/144x144.png">
+  		<meta name="msapplication-TileColor" content="#2F3BA2">
 	</head>
 
 	<body id="page-top" class="index">
